--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,12 @@ header {
     transition: all 0.1s ease-out;
     cursor: pointer;
 }
+
+.todo-list__text {
+    transition: all .2s ease-in-out; 
+}
+
+
+.todo-list__text:hover { 
+    box-shadow: 2px 3px 10px -5px rgba(0, 0, 0, 0.6);
+}
