--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ main {
 
 .todo-list__text {
     padding: 0.75em 1em;
-    margin: 1em;
+    margin: 0.75em;
     background-color: #F5F591;
     box-shadow: 2px 3px 10px -5px rgba(0, 0, 0, 0.2);
     overflow-wrap: break-word;
@@ -314,11 +314,15 @@ header {
         justify-content: center;
     }
 
+    .todo-list__text {
+        margin: 0;
+    }
     
     .todo-list__item {
         max-width: 45%;
         flex: 1 1 100%;
         border-radius: 10px;
+        margin: 0.2em;
     }
 
     .delete-icon-container {
@@ -388,7 +392,7 @@ header {
     }
 
     .todo-list__item {
-        margin: 0.75em;
+        margin: 0.25em;
     }
 
     .delete-icon-container {
@@ -438,6 +442,31 @@ header {
     .delete-icon-container {
         top: 1px;
         left: 1px;
+    }
+}
+
+@media (min-width: 600px) and (max-height: 850px) {
+    .grid {
+        grid-template-rows: minmax(15%, 1fr) 80% minmax(5%, 1fr);
+    }
+}
+
+@media (min-width: 600px) and (max-height: 650px) {
+    .grid {
+        grid-template-rows: minmax(27.5%, 1fr) 62.5% minmax(5%, 1fr);
+    }
+
+    .todo-list__item {
+        margin: 0.25em;
+    }
+    
+    .date {
+        font-size: 1.75rem;
+    }
+
+    .navbar__tabs {
+        font-size: 0.75rem;
+        letter-spacing: 0.045em;
     }
 }
 
