--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ main {
 
 @media (min-width: 880px) {
     .grid {
-        grid-template-rows: minmax(10%, 1fr) 85% minmax(5%, 1fr);
+        grid-template-rows: minmax(10%, 1fr) 80% minmax(5%, 1fr);
     }
 
     .container-flex {
@@ -548,20 +548,20 @@ main {
     }
 
     .date {
-        font-size: 2.2em;
+        font-size: 1.5rem;
         margin-bottom: 0;
-        margin-left: 1em;
+        margin-left: 2.5em;
     }
 
     ul.navbar__tabs {
-        font-size: 1.1em;
+        font-size: 0.8rem;
         margin-top: 1.275em;
-        margin-right: 1em;
+        margin-right: 2.5em;
     }
 
     .container {
         width: 100%;
-        max-width: 1700px;
+        max-width: 2000px;
     }
 
     .todo-list__item {
@@ -578,25 +578,31 @@ main {
     }
 }
 
-@media (min-width: 880px) and (min-height: 650px) {
+@media (min-width: 880px) and (min-height: 400px) {
+    .grid {
+        grid-template-rows: minmax(10%, 1fr) 82.5% minmax(5%, 1fr);
+    }
+
     .date {
-        font-size: 2.5rem;
-        margin-left: 0.5em;
+        font-size: 1.75rem;
     }
 
-    .navbar__tabs {
-        font-size: 1.5rem;
-        letter-spacing: 0.045em;
-        margin-left: 0.5em;
-    }
-
-    header::before {
-        width: 50px;
-        left: -50px;
-    }
-    
-    header::after {
-        width: 50px;
-        right: -50px;
+    ul.navbar__tabs {
+        font-size: 1rem;
     }
 }
+
+@media (min-width: 880px) and (min-height: 750px) {
+    .grid {
+        grid-template-rows: minmax(10%, 1fr) 85% minmax(5%, 1fr);
+    }
+
+    .date {
+        font-size: 2.2rem;
+    }
+
+    ul.navbar__tabs {
+        font-size: 1.1rem;
+    }
+}
+
